syntax = "proto3";

package golem.rib;

import "golem/rib/ir.proto";

message RibByteCode {
    repeated RibIR instructions = 1;
}
